[package]
name = "mcmc_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.4"

[target.'cfg(linux)'.dependencies]
ndarray-linalg = { version = "0.14.1", features = ["openblas-static"] }

# [target.'cfg(not(linux))'.dependencies]
# ndarray-linalg = { version = "0.14.1", features = ["intel-mkl-static"] }